tests/valid/recursion.fl
recursive :: proc (a: i32) -> i32 {
  return recursive(a);
}

main :: proc () {
  a := recursive;
}
