tests/invalid/proc_type_extern.fl
Extern :: proc* "c" (i32, i32) -> i32;

sum :: proc (i32, i32) -> i32 {}

main :: proc () {
  mysum: Extern = sum;
}
